@@ -204,14 +204,12 @@ namespace softsusy {
     /// g^Li_Lj = m_{ij} for LH fields
     /// g^Ei_Ej = m_{ji} for RH fields
     
-#ifdef COMPILE_THREE_LOOP_RGE
     /// Calculates three-loop anomalous dimensions in the dominant third family
     /// approximation and adds them
     void getThreeLpAnom(DoubleMatrix & gEE, DoubleMatrix & gLL,
 			DoubleMatrix & gQQ, DoubleMatrix & gDD,
 			DoubleMatrix & gUU, double & gH1H1, double &
 			gH2H2, sBrevity & a) const;
-#endif
     
     void anomalousDimension(DoubleMatrix & gEE, DoubleMatrix & gLL,
 			    DoubleMatrix & gQQ, DoubleMatrix & gUU,
@@ -266,16 +264,10 @@ namespace softsusy {
   void setBetas(DoubleMatrix &, DoubleVector  &, DoubleVector  &, DoubleVector
 		&, DoubleVector  &);
   
-#ifdef COMPILE_THREE_LOOP_RGE
-  
-  
   void setBetasThreeLoop(Tensor &, DoubleMatrix &, DoubleMatrix &, 
 			 DoubleMatrix &, DoubleVector &, DoubleVector &, DoubleVector &,
 			 DoubleVector &, DoubleVector &, DoubleVector &, DoubleVector &,  
 			 DoubleVector &); 
-  
-#endif //COMPILE_THREE_LOOP_RGE 
-  
   inline const MssmSusy & MssmSusy::displayMssmSusy() const { return *this; }
   
   inline void MssmSusy::setGaugeCoupling(int i, double f) { g(i) = f; }
